# Rann

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/: CMakeLists.txt
frontend/: classifier_test.py  network.py  networks.py  seq_translation.py  vocab_analyzer.py
frontend/framework/: flow.py  networks.py
frontend/utils/: loader.py  string_assistance.py
